// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuildMemberUpdates should add data to the tree 1`] = `
{
  "added": {
    "Test": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
    ],
  },
  "removed": {
    "Example": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
    ],
  },
}
`;

exports[`GuildMemberUpdates should add data to the tree 2`] = `
{
  "": {
    "": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
        },
      },
    ],
  },
  "added": {
    "Test": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
    ],
  },
  "removed": {
    "Example": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
    ],
  },
}
`;

exports[`GuildMemberUpdates should add data to the tree 3`] = `
{
  "": {
    "": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
        },
      },
    ],
  },
  "added": {
    "Test": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
        },
      },
    ],
  },
  "removed": {
    "Example": [
      {
        "ioc": {},
        "options": {
          "event": "GUILD_MEMBER_UPDATE",
          "roleNamesAdded": [
            "Test",
          ],
          "roleNamesRemoved": [
            "Example",
          ],
        },
      },
    ],
  },
}
`;
